# 2026-CAPSTONE

./: README.md  phase1_bronze.py  phase2_silver.py  phase3_gold.py  phase4_validation.py  read_gait_data.m  reference_emg.csv  run_pipeline.py
emg/emg_software/: .gitignore
emg/emg_software-task-refractor_code/: README.md
emg/emg_software-task-refractor_code/app/: README.md
emg/emg_software-task-refractor_code/firmware/: README.md
emg/emg_software/app/: .gitignore  pyproject.toml
emg/emg_software/app/old_code/: main.py
emg/emg_software/app/old_code/scripts/: filter_experiment.py  fourier_analysis.py  plot_data.py  record_emg_cli.py  show_data.py
emg/emg_software/app/src/: main.py
emg/emg_software/app/src/core/controllers/: main_controller.py
emg/emg_software/app/src/core/models/: recording.py  types.py
emg/emg_software/app/src/core/services/: camera_control_service.py  signal_processing_service.py
emg/emg_software/app/src/core/views/: components.py  main_window.py
emg/emg_software/app/src/core/workers/: serial_worker.py
emg/emg_software/firmware/: platformio.ini
emg/ref-data/: plot_reference_emg.py
emg/ref-data/1-bronze/: integrity_report.csv  metadata_master.csv
emg/ref-data/2-silver/: normalized_data.npy  quality_report.csv  valid_files.csv
emg/ref-data/3-gold/: outlier_report.csv  subject_profiles.npy  validation_report.txt  variability_summary.csv
emg/ref-data/output/: S001_Trial01_Step01.csv  S001_Trial01_Step02.csv  S001_Trial02_Step01.csv  S001_Trial02_Step02.csv  S001_Trial03_Step01.csv  S001_Trial03_Step02.csv  (+1054 more)
(+8 files in other folders)
